--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "@types/d3-array": "^1.0.6",
+    "@types/d3-axis": "^1.0.5",
+    "@types/d3-scale": "^1.0.4",
+    "@types/d3-selection": "^1.0.5",
+    "@types/d3-shape": "^1.0.5",
     "core-js": "^2.4.1",
+    "d3-axis": "^1.0.3",
+    "d3-scale": "^1.0.3",
+    "d3-selection": "^1.0.2",
+    "d3-shape": "^1.0.3",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
@@ -28,7 +37,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.19-3",
+    "angular-cli": "^1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.1",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -40,7 +49,7 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "~2.0.3",
+    "typescript": "^2.0.7",
     "webdriver-manager": "10.2.5"
   }
 }
